opt:数据绑定器支持属性内部泛型绑定